Adding Mapers and adding Service methods